tests/src/test/scala/annotations/neg/macro-annotation-packageobject.check
Pkg_2.scala:1: error: expected start of definition
@doubler package object pkg
         ^
one error found
